# indie-founder-mcp

./: .dockerignore  .env.example  .gitignore  .mcpbignore  Dockerfile  LOG.md  README.md  manifest.json  pyproject.toml  requirements.txt  server.json
.github/workflows/: publish-mcp.yml
scripts/: smoke_gumroad_live.py  smoke_multi_provider_live.py  test_gumroad_adapter_offline.py  test_license_gate_offline.py  test_licensing_offline.py  test_polar_adapter_offline.py  test_stripe_adapter_offline.py
src/indie_founder_mcp/: __init__.py  __main__.py  licensing.py  models.py  server.py
src/indie_founder_mcp/adapters/: __init__.py  base.py  gumroad.py  lemonsqueezy.py  polar.py  stripe.py
